fix double scrolling for now

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -1,6 +1,6 @@
 #about {
   width: 90%;
-  /*min-height: 100vh;*/
+  min-height: 100vh;
   margin: 0 auto;
   max-width: 960px;
   @media only screen and (min-width: $cut) {
