--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,3 +1,5 @@
 .full-height {
 	height: 100vh;
 }
+
+html { overflow-x: initial !important; }
